# Builder

./: .gitignore  BUILD_AND_DEPLOY.md  BUILD_FIX_STRATEGY.md  BUILD_READY_SUMMARY.md  Builder_Final.md  DEVELOPER_QUICKSTART.md  FINAL_STATUS_REPORT.md  INSTALL.md  MERGE_ERROR_FIX.md  MODULE_ARCHITECTURE_FIX.md  NATIVE_BUILD_FIX.md  OAUTH_STATUS.md  OAUTH_TESTING.md  PROJECT_STATUS.md  PROJECT_STATUS_V2.md  README.md  REPOSITORY_ANALYSIS.md  RESOURCE_FIX.md  RUNTIME_ERRORS_TODO.md  SECURITY_AUDIT.md  SOURCE_STRUCTURE_FIX.md  TERMUX_BUILD.md  WASMTIME_BUILD_STATUS.md  WORKFLOW_COMPARISON.md  WORK_PROTOCOL.md  build-and-download.sh  build.gradle.kts  build_output.txt  build_result.txt  checksums.sha256  create_launcher_icons.py  diagnose-build.sh  download-apk.sh  fix_and_build.sh  fix_builder_instance_dao.sh  get-builder.sh  gradle.properties  install-builder.sh  install.sh  kotlin_build.txt  (+3 more)
.backup_fix_20260111_014451/: InstanceManager.kt
.claude/hooks/: session-start.sh
.github/workflows/: android-build.yml  android-ci.yml  build-wasmtime.yml  builder-deploy.yml  ci.yml  release.yml
apk-download/: summary.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_legacy.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
artifacts/wasm-execution-results/: hello.wasm  summary.json
build-latest/: checksums.sha256
build-output/Builder-v1.0.0/: Builder-v1.0.0.apk.sha256
core/: build.gradle.kts
core/model/: HealthMetrics.kt  InstallMode.kt  Instance.kt  Log.kt  Pack.kt  PackManifest.kt
core/repository/: InstanceRepository.kt  LogRepository.kt  PackRepository.kt
core/util/: NamingConventions.kt  TargetDetection.kt
data/: build.gradle.kts
data/local/db/: BuilderDatabase.kt
data/local/db/dao/: InstanceDao.kt  LogDao.kt  PackDao.kt
data/local/db/entities/: InstanceEntity.kt  LogEntity.kt
data/local/storage/: PackStorage.kt
data/remote/github/: AuthInterceptor.kt  GitHubApiService.kt  GitHubOAuthService.kt
data/remote/github/models/: Artifact.kt  Repository.kt  WorkflowRun.kt
data/repository/: LogRepositoryImpl.kt
data/src/main/assets/workflows/: generic.yml  go.yml  jvm.yml  nodejs.yml  python.yml  rust.yml  static.yml  wasm.yml
docs/: GITHUB_OAUTH_SETUP.md  GITHUB_OAUTH_VERIFICATION.md  WASMTIME_BUILD_GUIDE.md
domain/: build.gradle.kts
domain/instance/: InstanceUseCases.kt  StartInstanceUseCase.kt
native/wasmtime-android/: CMakeLists.txt  README.md
native/wasmtime-android/src/: wasmtime_jni.c
pack-templates/wasm-hello/: Cargo.toml
pack-templates/wasm-hello/.github/workflows/: pack-build-matrix.yml
pack-templates/wasm-hello/scripts/: build-pack.sh  verify-pack.sh
pack-templates/wasm-hello/src/: main.rs
runtime/: HealthMonitor.kt  build.gradle.kts
runtime/wasm/: WasiConfig.kt
runtime/wasm/permissions/: PermissionEnforcer.kt
runtime/workflow/: WorkflowContext.kt  WorkflowEngine.kt
scripts/: build-wasmtime.sh  verify-oauth.sh
test-pack/: checksums.sha256  hello.wat  pack.json
ui/: build.gradle.kts
ui/components/: GitHubComponents.kt
ui/navigation/: Navigation.kt
ui/screens/: LogsScreen.kt
ui/screens/instances/: InstancesScreen.kt  InstancesViewModel.kt
ui/screens/packs/github/: EnhancedGitHubPacksScreen.kt
ui/viewmodel/: LogsViewModel.kt
(+106 files in other folders)
